# algolia-tcg-search

./: .gitignore  .vercelignore  BLOG.md  PROMPT.md  README.md  RFC-multimodal-search.md  package-lock.json  package.json  setup_event.sh  teardown_event.sh  vercel.json
.claude/: CSS_CLEANUP_PLAN.md  MULTI_EVENT_PLAN.md  claude.md
.github/workflows/: lint.yml
agent/: .env.example  BLOG.md  PROMPT.md  README.md  agent-config.json  agent.py  agent_cli.py  create_event_agent.py  pyproject.toml  requirements.txt
data/: .env.example  algolia-config.json  algolia-events-config.json  schema.json  supabase_claims_table.sql
data/data-files/: TCG Search Website - Raw List - Mega Evolution (132).csv  TCG Search Website - Raw List - Mega Evolution_ Phantasmal Flames (094).csv  TCG Search Website - Raw List - Scarlet & Violet_ Destined Rivals (182).csv  TCG Search Website - Raw List - Scarlet & Violet_ Journey Together (159).csv  TCG Search Website - Raw List - Scarlet & Violet_ Surging Sparks (191).csv
data/data-files/adobe-summit-2026/: (WIP) TCG Search Raw List - Adobe Summit 2026 .xlsx  TCG Search Raw List - Adobe Summit 2026 .xlsx
data/data-files/foo-nyc-2026/: TCG Search Website - Raw List - Mega Evolution (132).csv  TCG Search Website - Raw List - Mega Evolution_ Phantasmal Flames (094).csv  TCG Search Website - Raw List - Scarlet & Violet_ Destined Rivals (182).csv  TCG Search Website - Raw List - Scarlet & Violet_ Journey Together (159).csv  TCG Search Website - Raw List - Scarlet & Violet_ Surging Sparks (191).csv  TCG Search Website - Raw List.xlsx
data/data-files/lead-summit-2026/: TCG Search Raw List - The Lead Summit 2026 .xlsx
data/data-files/msft-build-2026/: TCG Search Raw List_Microsoft Build 2026 .xlsx  (+1 more)
data/data-utilities/: README.md  clear_index.py  configure_index.py  copy_index_records.py  create_event.py  delete_event.py  enrich_chase_cards.py  ingest.py  inject_lead_claims.py  pyproject.toml  requirements.txt  reset_and_ingest.sh  set_active_event.py  setup_event.sh  validate_csv.py
tcg-search/: .env.example  README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.js
tcg-search/public/: index.html
tcg-search/src/: App.css  App.js  App.jsx  index.js  index.jsx  setupTests.js
(+39 files in other folders)
