[project]
name = "agent-utilities"
version = "0.1.0"
description = "Algolia Agent Studio CLI for TCG Search"
authors = [
    {name = "Chuck Meyer",email = "chuck.meyer@algolia.com"}
]
requires-python = ">=3.14"
dependencies = [
    "algolia-agent @ git+https://github.com/algolia-samples/algolia-agent-cli.git@8105d9f",
    "python-dotenv (>=1.0.0,<2.0.0)",
]
